--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="src/style/style.css">
 </head>
 <body>
 	<input type="button" value="弹出" class="btn">
 	<a href="javascript:;" class="submit">提交</a>
 	<div id="hehe" style="height:100px">111</div>
 
-	<script src="js/require.js" data-main="js/main"></script>
+	<script src="require.js" data-main="dist/js/main"></script>
 </body>
 </html>
