--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="src/style/style.css">
+	<link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
 	<input type="button" value="弹出" class="btn">
